--- a/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/update-resoure-form/update-resoure-form.component.scss
@@ -9,9 +9,10 @@
 }
 .field {
     label {
-        font-family: 'Roboto Slab';
+        font-family: 'CampaignMedium';
         font-size: 1.25em;
-        font-weight: 400;
+        font-weight: 500 !important;
+       // font-weight: 400;
     }
 }
 .ui.selection.dropdown {
@@ -24,6 +25,7 @@
 }
 ::-webkit-input-placeholder {
     font-family: 'Montserrat';
+    font-weight: 500 !important;
 }
 hr {
     border-top: 1px solid rgba(0,0,0,.1);
