--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
@@ -2,7 +2,7 @@
 @import "../../../../../assets/styles/mixins/mixins";
 /* fonts */
   .font-w-bold {
-    font-weight: bold !important;
+   // font-weight: bold !important;
   }
 
   /* colors */
@@ -148,10 +148,11 @@ display: inline-block;
 }
 span {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
 }
 .card , .username {
-  font-family: 'Roboto Slab';
-  font-weight: 400;
+  font-family: 'CampaignMedium';
+  // font-weight: 400;
 }
 // @media only screen and (max-width: 1023px){
 //   ::ng-deep {
