--- a/src/app/client/src/assets/styles/styles.scss
+++ b/src/app/client/src/assets/styles/styles.scss
@@ -42,8 +42,8 @@
   font-weight: bold !important;
 }
 h5 {
-  font-family: 'Roboto Slab' !important;
-  font-weight: 500;
+  font-family: 'CampaignMedium' !important;
+  font-weight: 500 !important;
 }
 // a {
 //   font-family: 'Montserrat' !important;
