--- a/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-data-driven-filter/space-data-driven-filter.component.scss
@@ -19,21 +19,27 @@
 
 .field {
     label {
-        font-family: 'Roboto Slab' !important;
+        font-family: 'CampaignMedium' !important;
         font-size: 1.25em;
-        font-weight: 400;
+        font-weight: 500 !important;
+        // font-weight: 400;
     }
 }
+::ng-deep .ui.multiple.dropdown .text {
+    font-size: 14px !important;
+    font-family: 'Montserrat';
+    font-weight: 500 !important;
+  }
 .button {
     background-color: #865BA0 !important;
     border: none;
     width: fit-content;
     border-radius: 5px;
     // height: 40px;
-    font-family: "Muli",sans-serif;
-    font-size: 15px;
+    font-family: 'Montserrat';
+    font-size: 13px !important;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 400;
     box-shadow: none;
     cursor: pointer;
     color: white !important ;
