--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.html
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.html
@@ -24,7 +24,7 @@
             </div> -->
             <div class="col-lg-3 col-md-4 col-sm-12 text-pp mt-15">
               <div class="row r">
-                  <h5 class="footer__title" style="font-family: 'Roboto Slab';
+                  <h5 class="footer__title" style="font-family: 'CampaignMedium';
                   color: #707070 !important;">Contact Us</h5> 
               </div>
               <div class="row">
