--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -58,6 +58,7 @@ i.fas.fa-database.fa-lg {
  }
  span {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
  }
  #pub {
   background-color: #865BA0 !important;
@@ -181,16 +182,20 @@ i.fas.fa-database.fa-lg {
 }
 button {
   font-family: 'Montserrat' !important;
+  font-weight: 500 !important;
 }
 .card-body {
   height: 17rem;
-  font-family: 'Montserrat Light' !important;
-  // font-family: 'Montserrat';
+  // font-family: 'Montserrat Light' !important;
+   font-family: 'Montserrat';
+   font-weight: 500 !important;
   p {
     font-size: 15px;
   }
 }
-
+.btn-purple {
+  background-color: #865BA0 !important;
+}
 .btn-sec {
   background-color: #865BA0 !important;
   border: none;
