--- a/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.scss
@@ -3,7 +3,7 @@
 h4 {
     font-size: 40px;
     color: #636363;
-    font-family: 'Roboto Slab';
+    font-family: 'CampaignMedium';
 }
 
 .container {
@@ -15,9 +15,10 @@ h4 {
     border-radius: 7px;
 }
 label {
-    font-family: 'Roboto Slab';
+    font-family: 'CampaignMedium';
     font-size: 1.25em;
-    font-weight: 400;
+    font-weight: 500 !important;
+    // font-weight: 400;
 }
 .btn-sec {
  background-color: #865BA0 !important;
@@ -28,7 +29,7 @@ label {
   font-family:  'Montserrat';
   font-size: 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500 !important;
   box-shadow: none;
   cursor: pointer;
 }
@@ -47,7 +48,7 @@ label {
   font-size: 15px;
   width: 120px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500 !important;
   box-shadow: none;
   cursor: pointer;
 }
