--- a/src/app/client/src/app/modules/public/components/about-us/about-us.component.css
+++ b/src/app/client/src/app/modules/public/components/about-us/about-us.component.css
@@ -77,6 +77,7 @@ p {
     line-height: 2.0;
     text-align: center;
     font-family: 'Montserrat';
+    font-weight: 500 !important;
      /*
      font-family: 'Muli', sans-serif;
      */
