--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -21,11 +21,12 @@
     display: block;
     font-size: 17px;
     font-family: 'Montserrat';
+    font-weight: 500 !important;
     line-height: 2em;
   }
 .text-ac {
-  font-family: 'Roboto Slab';
-   font-weight: bold;
+  font-family: 'CampaignMedium';
+  //  font-weight: bold;
 }
   ul li {
     margin-bottom: 0;
