updated list of collaborators and their logo

--- a/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.html
+++ b/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.html
@@ -16,14 +16,15 @@
   <div class="container container-fluid partnerContainer">
     <div class="partnerContainerBody">
       <div class="row imageRow">
-        <div class="box"><a href="https://ekstep.in/" target="_blank"><img src="../../../../../assets/space/shikshalokam.png" class="p-0"></a></div>
-        <div class="box"><a href="https://shikshalokam.org/" target="_blank"><img src="../../../../../assets/space/shikshaLokam1.png"></a></div>
-        <div class="box"><a href="http://arghyam.org/" target="_blank"><img src="../../../../../assets/space/arghyam.png"></a></div>
-        <div class="box"><a href="https://www.echoindia.in/" target="_blank"><img src="../../../../../assets/space/projectECHO.jpg"></a></div>
-        <div class="box"><a href="https://avantifinance.in/" target="_blank"><img src="../../../../../assets/space/avanti.png"></a></div>
-        <div class="box"><a href=" https://www.egovernments.org/" target="_blank"><img src="../../../../../assets/space/egov.png" class="p-0"></a></div>
+        <div class="box"><a href="https://ekstep.in/" target="_blank"><img src="../../../../../assets/space/EkStepLogo.svg" class="p-0"></a></div>
+        <div class="box"><a href="https://shikshalokam.org/" target="_blank"><img src="../../../../../assets/space/ShikshaLokamLogo.png"></a></div>
+        <!-- <div class="box"><a href="http://arghyam.org/" target="_blank"><img src="../../../../../assets/space/arghyam.png"></a></div> -->
+        <div class="box"><a href="https://www.echoindia.in/" target="_blank"><img src="../../../../../assets/space/ECHOlogo.jpg"></a></div>
+        <!-- <div class="box"><a href="https://avantifinance.in/" target="_blank"><img src="../../../../../assets/space/avanti.png"></a></div> -->
+        <div class="box"><a href=" https://www.egovernments.org/" target="_blank"><img src="../../../../../assets/space/eGovlogo.png" class="p-0"></a></div>
+        <div class="box"><a href="https://www.aastar.org/" target="_blank"><img src="../../../../../assets/space/AastarLogo.png" class="p-0"></a></div>
       </div>
-      <div class="box1 text-center mt-90"><a href="https://www.socion.io/" target="_blank"><img src="../../../../../assets/space/Socion.png" class="p-0"></a></div>
+      <!-- <div class="box1 text-center mt-90"><a href="https://www.socion.io/" target="_blank"><img src="../../../../../assets/space/Socion.png" class="p-0"></a></div> -->
     </div>
     <!-- <div class="allContributions">
       <h3 class="contributionText">
