--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -103,9 +103,9 @@
 				<nav class="navbar-collapse collapse" id="menu" aria-expanded="false"
 					style="height: 1px;margin-top: 22px;margin-left: 30px;">
 					<div class="computer only">
-						<a class="menuItem" onclick="gotoContact('about')">About</a>
-						<a class="menuItem" onclick="gotoResources('explore')">Assets</a>
-						<a class="menuItem" onclick="gotoContact('collaborators')">Collaborators</a>
+						<a class="menuItem links" onclick="gotoContact('about')">About</a>
+						<a class="menuItem links" onclick="gotoResources('explore')">Assets</a>
+						<a class="menuItem links" onclick="gotoContact('collaborators')">Collaborators</a>
 						<!-- <a class="menuItem" id="a" onclick="gotoContact('contactUs')">Contact</a> -->
 						<!-- <a class="menuItem" id="a" href="/contactUs">Contact</a> -->
 						
