--- a/src/app/client/src/app/modules/core/components/space-header/space-header.component.scss
+++ b/src/app/client/src/app/modules/core/components/space-header/space-header.component.scss
@@ -68,6 +68,7 @@ transition: opacity .1s ease;
 #ab{
   border-radius:4px !important;
   text-align: center;
+  font-family: 'Montserrat' !important;
   font-weight: 400 !important;
   color: white !important;
   height: 46px;
