--- a/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.css
+++ b/src/app/client/src/app/modules/public/components/people-invloved/people-invloved.component.css
@@ -37,12 +37,13 @@ p {
   padding: 0.5em 1em 0em 1em;
 } */
 .box {
-  width: 27%;
+  width: 34%;
   padding: 5.5em 1em 0em 1em;
 }
 
 img {
     max-width: 100%;
+    max-height: 160px;
     transition: all 0.2s ease-in;
     -webkit-transition: all 0.2s ease-in;
     vertical-align: middle;
