banner color regarding to collaborators , about us and other static page changed

--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -58,7 +58,7 @@ i.fas.fa-database.fa-lg {
   font-weight: 500 !important;
  }
  #pub {
-  background-color: #865BA0 !important;
+  background-color: #c6bcb8 !important;
    border-radius: 4rem;
    font-family: "Muli",sans-serif;
    color: white ;
