--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
@@ -25,6 +25,7 @@
   }
   .text-ac {
     font-family: 'CampaignMedium';
+    color: white;
    // font-weight: bold;
   }
   li {
@@ -37,6 +38,9 @@
   }
   ul li {
     margin-bottom: 0;
+  }
+  .jumbotron {
+    background-color: #686365;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
