--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -26,10 +26,14 @@
   }
   .text-ac {
     font-family: 'CampaignMedium';
+    color: white;
    // font-weight: bold;
   }
   ul li {
     margin-bottom: 0;
+  }
+  .jumbotron {
+    background-color: #686365;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
