--- a/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.scss
+++ b/src/app/client/src/app/modules/public/components/partners-sunbird/partners-sunbird.component.scss
@@ -143,6 +143,9 @@ li {
   font-size: 17px;
   font-family: 'Muli', sans-serif;
 }
+.jumbotron {
+  background-color: #686365;
+}
 .cimage{
   background-image: url('../../../../../assets/images/slide-04.png');
   background-size: cover;
