--- a/src/app/client/src/app/modules/public/components/blog/blog.component.css
+++ b/src/app/client/src/app/modules/public/components/blog/blog.component.css
@@ -25,6 +25,7 @@
   }
   .text-ac {
     font-family: 'CampaignMedium';
+    color: white;
     /* font-weight: bold; */
   }
   .text p {
@@ -34,6 +35,9 @@
   li {
     line-height: 2em;
     font-size: 17px;
+  }
+  .jumbotron {
+    background-color: #686365;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
