--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.css
@@ -28,12 +28,16 @@
   }
   .text-ac {
     font-family: 'CampaignMedium';
+    color: white;
     /* font-weight: bold; */
   }
   ol li {
     line-height: 2em;
     font-family: 'Muli', sans-serif;
     font-size: 17px;
+  }
+  .jumbotron {
+    background-color: #686365;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
