--- a/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
+++ b/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.scss
@@ -35,7 +35,7 @@
  .text-1{
   font-size: 24px;
   font-style: italic;
-  font-family: Muli,sans-serif;
+  font-family: 'CampaignMedium';
  }
 p {
   margin: 0 0 1rem;
