changed about us content in SPace

--- a/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
+++ b/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
@@ -49,17 +49,20 @@
 		</div>
 	</div>
 	<div class="container">
-			<!-- <i class="fa-bookmark fas fs-1-429 pr-15" style="color: cadetblue;"></i> -->
-		<p class="text pb-15">Our societal challenges are very large, complex and tend to grow much faster than our
-			individual ability to solve them. The scale and diversity of problems call for leveraging and sharing the
-			existing resources to create contextual solutions at speed.</p>
-		<p class="text pb-15">SPace (Societal Platform Assets Collaboration Environment) is a collection of resources
-			shared by various organizations working towards a societal mission. It connects to people, organizations,
-			technology, processes, methods and domains. These resources can be reused to create solutions in different
-			contexts.</p>
-		<p class="text pb-15">SPace is the outcome of collective efforts of practitioners of Societal Platform approach.
-		<a href="https://societalplatform.org/" target="_blank">Learn more about Societal Platform Thinking.</a></p>
-		<p class="text pb-15">We welcome contributions from different partners from Samaaj, Sarkaar and Bazaar. If you
-			would like to share your resources on SPace, please write to us at space@societalplatform.org</p>
+		<!-- <i class="fa-bookmark fas fs-1-429 pr-15" style="color: cadetblue;"></i> -->
+		<p class="text pb-15">Our societal challenges are large, complex and dynamic. They tend to grow much faster than
+			our individual ability to solve them. The scale and diversity of our problems call for
+			sharing, reusing and leveragin our existing assets and resources. If we all share and learn, we can all
+			rapidly create many more contextual solutions.</p>
+		<p class="text pb-15">SPace (Societal Platform Assets Collaboration Environment) is your platform to share your
+			assets and resources. SPace is your platform to leverage assets and resources shared by other Societal
+			Platform Missions. SPace connects people and organisations who share technology, protocols, processes,
+			methods and data as a public good.</p>
+		<p class="text pb-15">SPace is an outcome of your collective efforts, and that of all your fellow practitioners
+			of the Societal Platform approach.
+			<a href="https://societalplatform.org/" target="_blank">Learn more about Societal Platform Thinking.</a></p>
+		<p class="text pb-15">You are welcome to leverage, co-create and contribute. If you are excited about sharing
+			your creations on SPace, please reach us at <a href="mailto:space@societalplatform.org" target="_blank">space@societalplatform.org</a>. We would be delighted to
+			orchestrate!</p>
 	</div>
 </section>
