--- a/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
@@ -21,7 +21,7 @@
           [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug !== 'sunbirdorg' && slug !== 'space'"></app-page-section>
         </div>
       </div>
-        <div *ngIf="sectionData === true" class="twelve wide column">
+        <div *ngIf="sectionData === true && carouselMasterData.length !== 0" class="twelve wide column">
         <!-- <app-space-page-section (visits)="prepareVisits($event)" [enable]="true" (playEvent)="playContent($event)" [section]="pageSections "
           [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug === 'space'"></app-space-page-section> -->
           <app-space-view-all [sectionObj]="sectionObj"></app-space-view-all>
