--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -33,7 +33,7 @@ i.fas.fa-database.fa-lg {
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 14px;
-  color: #686F7A;
+  color: black;
   padding-bottom: 6px;
 }
  #style {
@@ -54,7 +54,7 @@ i.fas.fa-database.fa-lg {
   margin-top: -32px;
  }
  span {
-  font-family: 'Montserrat' !important;
+  font-family: 'MonsterattRegular_2' !important;
   font-weight: 500 !important;
  }
  #pub {
@@ -178,14 +178,14 @@ i.fas.fa-database.fa-lg {
   
 }
 button {
-  font-family: 'Montserrat' !important;
+  font-family: 'MonsterattRegular_2' !important;
   font-weight: 500 !important;
 }
 .card-body {
   height: 17rem;
-   font-family: 'Montserrat';
+   font-family: 'MonsterattRegular_2';
    font-weight: 500 !important;
- // font-family: 'Montserrat Light' !important;
+ // font-family: 'MonsterattRegular_2' !important;
   p {
     font-size: 15px;
   }
@@ -237,7 +237,7 @@ a:hover {
   text-decoration: none;
 }
 .contentlink{
-  color:#007bff;
+  color:black;
 }
 .contentlink:hover{
   text-decoration: underline;
